--- a/quarto/Qiime2-Applications.qmd
+++ b/quarto/Qiime2-Applications.qmd
@@ -167,8 +167,10 @@ rule core_metrics_analysis:
 
 **2. Since many of the steps in a Qiime2 workflow are interactive, put each step in it's own Snakemake rule.**
 
-I originally thought that it would be more streamlined to put all of the Qiime2 workflow code into a regular bash script and to reference that in my Snakemake rules (it would certainly make my snakefile shorter). However, since many of the outputs in the Qiime2 workflow need to be referenced to inform the parameters on downstream steps, leaving each step in it's own rule allows you to easily check generated outputs and adjust subsequent parameters. This is also particularly helpful when you need to re-run your workflow (as that inevitably happens) since Snakemake will only re-run rules that have been altered or are missing outputs so the super time-consuming Qiime2 steps will only be run once. If you had everything in a bash script, it would be re-run with your workflow every time, which is a lot of time and computational power that will slow down your analysis.
+I originally thought that it would be more streamlined to put all of the Qiime2 workflow code into a regular `bash` script and to reference that in my Snakemake rules (it would certainly make my snakefile shorter). However, since many of the outputs in the Qiime2 workflow need to be referenced to inform the parameters on downstream steps, leaving each step in it's own rule allows you to easily check generated outputs and adjust subsequent parameters. This is also particularly helpful when you need to re-run your workflow (as that inevitably happens) since Snakemake will only re-run rules that have been altered or are missing outputs so the super time-consuming Qiime2 steps will only be run once. If you had everything in a `bash` script, it would be re-run with your workflow every time, which is a lot of time and computational power that will slow down your analysis.
 
 **3. Qiime2 doesn't like to be referenced as a YAML file. Instead, you should follow the Qiime2 installation instructions on their website to use that environment in your snakefile.**
 
 I had a really unfun time attempting to create my own Qiime2 `.yaml` file to reference in my snakefile. It seemed like no matter which approach I took (including the one suggested on the [Elaborating Rules Page](https://sterrettjd.github.io/Effective-Snakemake-HPC/quarto/Elaborating-rules.html#using-conda-environment-yaml-recommended)), the `.yaml` file wouldn't reference Qiime2 correctly. I ended up creating a `bash` script with the exact Qiime2 installation instructions in it and running that `bash` script before my workflow [like so](https://sterrettjd.github.io/Effective-Snakemake-HPC/quarto/Elaborating-rules.html#combining-use-of-conda-environment-name-and-yaml-files).
+
+If you've figured out a better way to use Qiime2 with Snakemake please open an issue/pull request so I can add it! 
